<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:paddingTop="5dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearPost"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/corner_linear_post"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="120dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:shapeAppearanceOverlay="@style/corner"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/date"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/corner"
            android:fontFamily="@font/cairo_reg"
            android:gravity="center"
            android:text="@string/after10min"
            android:textColor="#FDFCFC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055"
            app:layout_constraintWidth_min="30dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_black"
            android:gravity="right"
            android:maxLength="70"
            android:text="@string/title_example"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.051" />

        <TextView
            android:id="@+id/description"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_reg"
            android:gravity="right"
            android:maxLength="120"
            android:text="@string/description_example"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.969"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/corner_linear_post2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.963"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.941">

            <TextView
                android:id="@+id/nameSource"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:fontFamily="@font/cairo_reg"
                android:gravity="right"
                android:text="اسم الموقع"
                android:textColor="@color/white"
                tools:visibility="visible" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iconSource"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:shapeAppearanceOverlay="@style/cornerImage"
                tools:srcCompat="@tools:sample/avatars"
                tools:visibility="visible" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/speechButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@drawable/corner_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icon_texttospeech" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>